// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tables jagged table 1`] = `
"
|          |        |       |                                                                                                                                                                               |
| -------- | ------ | ----- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| laios    |        |       |                                                                                                                                                                               |
| marcille | 500    | mage  |                                                                                                                                                                               |
| falin    | healer |       |                                                                                                                                                                               |
| chilchuk | 29     | thief | 
        Looks like a child but is actually a divorced father of three. He is
        serious about his work and isn't interested in getting close with
        people
       |

"
`;

exports[`tables with column headings mixed alignment 1`] = `
"| name     | age | job     | [*notes*](https://en.wikipedia.org/wiki/Delicious_in_Dungeon)                                                                                    |
|:-------- | ---:| ------- |:------------------------------------------------------------------------------------------------------------------------------------------------:|
| laios    | 20  | fighter | A strange but earnest person. He *really **really*** likes monsters                                                                              |
| marcille | 500 | mage    | Difficult to get along with but very competent. Despite seeming strict and fussy, she is interested in forbidden magic...                        |
| falin    | 18  | healer  | She *seems* nice, but is actually just a people pleaser. When push comes to shove she will look out for people she loves and disregard strangers |
| chilchuk | 29  | thief   | Looks like a child but is actually a divorced father of three. He is serious about his work and isn't interested in getting close with people    |

"
`;

exports[`tables with column headings no alignment 1`] = `
"| name     | age | job     | [*notes*](https://en.wikipedia.org/wiki/Delicious_in_Dungeon)                                                                                    |
| -------- | --- | ------- | ------------------------------------------------------------------------------------------------------------------------------------------------ |
| laios    | 20  | fighter | A strange but earnest person. He *really **really*** likes monsters                                                                              |
| marcille | 500 | mage    | Difficult to get along with but very competent. Despite seeming strict and fussy, she is interested in forbidden magic...                        |
| falin    | 18  | healer  | She *seems* nice, but is actually just a people pleaser. When push comes to shove she will look out for people she loves and disregard strangers |
| chilchuk | 29  | thief   | Looks like a child but is actually a divorced father of three. He is serious about his work and isn't interested in getting close with people    |

"
`;

exports[`tables with column headings omitting columns 1`] = `
"| name     | job     |
| -------- | ------- |
| laios    | fighter |
| marcille | mage    |
| falin    | healer  |
| chilchuk | thief   |

"
`;

exports[`tables with column headings reordering columns 1`] = `
"| [*notes*](https://en.wikipedia.org/wiki/Delicious_in_Dungeon)                                                                                    | job     | age | name     |
| ------------------------------------------------------------------------------------------------------------------------------------------------ | ------- | --- | -------- |
| A strange but earnest person. He *really **really*** likes monsters                                                                              | fighter | 20  | laios    |
| Difficult to get along with but very competent. Despite seeming strict and fussy, she is interested in forbidden magic...                        | mage    | 500 | marcille |
| She *seems* nice, but is actually just a people pleaser. When push comes to shove she will look out for people she loves and disregard strangers | healer  | 18  | falin    |
| Looks like a child but is actually a divorced father of three. He is serious about his work and isn't interested in getting close with people    | thief   | 29  | chilchuk |

"
`;
